# wigner-resolution-from-action-capacity

./: .gitignore  CITATION.cff  LICENSE  README.md
code/: pyproject.toml
code/notebooks/: fig1_test.ipynb  fig1_test_styled.ipynb  render_eigen.py
code/src/wigner_resolution/: __init__.py  cells.py  convolve.py  kernels.py  plotstyle.py  ticks.py  wigner.py
code/src/wigner_resolution/figures/: __init__.py  grid.py  panels.py
code/src/wigner_resolution/systems/: harmonic.py  morse.py  squeezed_vacuum.py
omnigraffle/: capacity_blobs_resolution.graffle  equations.tex  heisenberg_cells.graffle
python/notebooks/: render_cat.py  render_eigen.py  render_harmonic.py  render_skeptic.py  render_tranfers.py  render_validation.py  verify_blobs.py  verify_blobs_skeptic.py  verify_non_negative.py
python/src/wigner_resolution/: __init__.py  cells.py  convolve.py  geometry.py  kernels.py  plotstyle.py  portrait.py  quantum.py  state.py
python/src/wigner_resolution/figures/: grid.py  overlays.py  panels.py  validation.py
python/src/wigner_resolution/systems/: __init__.py  cat.py  double_well.py  kerr.py  morse.py  skeptic.py
tex/: main.bib  main.tex  supplement.tex
