[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.7",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "qutip>=5.2.3",
    "scipy>=1.15.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/wigner_resolution"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
