[project]
name = "wigner-resolution"
version = "0.1.0"
description = "Code for the figures in 'Wigner Resolution as the Reciprocal of Action Capacity'"
requires-python = ">=3.12"
dependencies = [
    "qutip>=5",
    "numpy>=2",
    "scipy>=1.13",
    "matplotlib>=3.8",
    "jupyterlab>=4",
    "ipykernel>=6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/wigner_resolution"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
